Nearly done, need to investigate the best way to make the CTA button not overlap and be correct size

--- a/static/stylesheets/scss/styles.scss
+++ b/static/stylesheets/scss/styles.scss
@@ -387,6 +387,7 @@ input.agreement-checkbox {
 }
 
 .btn-add-new-project {
+  z-index: 99999;
   position: fixed;
   bottom: 20px;
   right: 20px;
